--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "replay_server/replay_parser"]
 	path = replay_server/replay_parser
 	url = https://github.com/norraxx/faf-replay-parser.git
+	branch = master
