--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ install:
 
 before_install:
   - docker pull faforever/faf-db
-  - docker run -d -p 3306:3306 faforever/faf-db
+
+before_script:
+  - sudo /etc/init.d/mysql stop
+  - docker run -d -p 127.0.0.1:3306:3306 faforever/faf-db
 
 script:
   - ./test.sh
