--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ after_script:
 after_success:
   - export REPO=faforever/faf-aio-replayserver
   - if [ -n "${TRAVIS_TAG}" ]; then
+      ./docker-build.sh;
       docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
       docker tag faf-aio-replayserver ${REPO}:${TRAVIS_TAG};
       docker push ${REPO};
