--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,17 @@ services: docker
 install:
   - pip3 install -r requirements-test.txt -r requirements-travis.txt
 
+before_script:
+  - sudo service mysql stop     # For some reason conflicts with faf-db
+  - git clone https://github.com/FAForever/faf-stack.git faf-stack
+      && pushd faf-stack
+      && cp -r config.template config
+      && popd
+  - docker-compose -f faf-stack/docker-compose.yml up -d faf-db
+  - export FAF_STACK_DB_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker ps -q -f "name=faf-db"))
+  - sleep 30
+  - python3 db_setup.py
+
 script:
   - python3 -m pytest -v --cov replayserver
   - python3 setup.py bdist
