Fixup travis build
For some reason we need coverage >= 4.4 specifically.

Signed-off-by: Igor Kotrasinski <i.kotrasinsk@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: required
 services: docker
 
 install:
+  - pip3 install coverage>=4.4
   - pip3 install -r requirements.txt -r requirements-test.txt
 
 before_script:
