--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - docker-compose -f faf-stack/docker-compose.yml up -d faf-db
   - export FAF_STACK_DB_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker ps -q -f "name=faf-db"))
   - sleep 30
-  - python3 db_setup.py
+  - python3 tests/db_setup.py
 
 script:
   - python3 -m pytest -v --cov replayserver
