--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,11 @@ before_script:
       && popd
   - docker-compose -f faf-stack/docker-compose.yml up -d faf-db
   - export FAF_STACK_DB_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(docker ps -q -f "name=faf-db"))
-  - sleep 60
+  - while ! docker exec -it faf-db sh -c "mysqladmin ping -h 127.0.0.1 -uroot -pbanana" &> /dev/null ; do
+      echo -n ".";
+      sleep 1;
+    done
+  - docker-compose -f faf-stack/docker-compose.yml run faf-db-migrations migrate
   - python3 tests/db_setup.py
 
 script:
