--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python: 3.6
 sudo: required
 services: docker
 
+before_install:
+    - APP_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG#*v}" || echo "${TRAVIS_BRANCH##*/}")
+    - DOCKER_IMAGE_VERSION=$([ -n "${TRAVIS_TAG}" ] && echo "${TRAVIS_TAG}" || echo "${TRAVIS_BRANCH##*/}")
+
 install:
   - pip3 install -r requirements.txt -r requirements-test.txt
   - pip3 install 'coverage>=4.4'
@@ -29,3 +33,11 @@ script:
 
 after_success:
   - coveralls
+  - export IMAGE_TAG=faf-aio-replayserver;
+  - export REPO=faforever/faf-aio-replayserver;
+  - if [ -n "${TRAVIS_TAG}" ]; then
+    docker build -t ${IMAGE_TAG} . &&
+    echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin &&
+    docker tag ${IMAGE_TAG} ${REPO}:${DOCKER_IMAGE_VERSION} &&
+    docker push ${REPO};
+    fi
