--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ after_success:
   - export REPO=faforever/faf-aio-replayserver
   - if [ -n "${TRAVIS_TAG}" ]; then
       docker login -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}";
-      docker tag faf-aio-replayserver ${REPO}:${TRAVIS_TAG};
-      docker push ${REPO};
+      docker tag faforever/faf-aio-replayserver ${REPO}:${TRAVIS_TAG};
+      docker push ${REPO}:${TRAVIS_TAG};
     fi
