--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,6 @@ pytest = "==3.7.1"
 pytest-cov = "==2.5.1"
 pytest-timeout = "==1.3.1"
 pytest-asyncio = "==0.9.0"
-pytest-profiling = "*"
+pytest-profiling = "==1.4.0"
 bugsnag = "==3.4.2"
 replay-parser = {git = "https://github.com/FAForever/faf-scfa-replay-parser.git", editable = true}
