--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ python_version = '3.6'
 [packages]
 asyncio = "==3.4.3"
 aiomysql = "==0.0.19"
+bugsnag = "==3.4.2"
+cython = "*"
+replay-parser = {git = "https://github.com/FAForever/faf-scfa-replay-parser.git"}
+
+[dev-packages]
 pytest = "==3.7.1"
 pytest-cov = "==2.5.1"
 pytest-timeout = "==1.3.1"
 pytest-asyncio = "==0.9.0"
 pytest-profiling = "*"
-bugsnag = "==3.4.2"
-replay-parser = {git = "https://github.com/FAForever/faf-scfa-replay-parser.git", editable = true}
