Update configuration options
Signed-off-by: Igor Kotrasinski <i.kotrasinsk@gmail.com>

--- a/example_config.yml
+++ b/example_config.yml
@@ -19,4 +19,4 @@ rs:
             replay_delay: "5"
             update_interval: "0.1"
         merge: 
-            stall_check_period: "60"
+            desired_quorum: "2"
